<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="id.autodhil.koramvvm.signin.SignInViewModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    snackbar="@{viewModel.message}"

    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relLayout1"
                android:padding="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Daftar Akun KoRa!"
                    android:textSize="25sp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:id="@+id/textEmailReg"
                    android:background="@drawable/border_blue"
                    android:padding="@dimen/s_16dp"/>


                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:layout_below="@+id/textEmailReg"/>


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/text_password"
                    android:layout_below="@+id/input_email"/>

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/ulangi_password"
                    android:layout_below="@+id/input_password"/>


                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_below="@+id/input_confirm_password"
                    android:text="@string/daftar"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"/>
            </RelativeLayout>
        </RelativeLayout>


    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/colorPrimary"
        visible="@{viewModel.visibility}"
        />
</RelativeLayout>
</layout>